--- a/style.css
+++ b/style.css
@@ -4,3 +4,16 @@
     box-sizing: border-box;
     font-family: 'poppins', sans-serif;
 }
+
+.container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: url(images/background.png);
+    background-position: center;
+    background-size: cover;
+    padding: 0 7%;
+    color: #fff;
+}
