--- a/style.css
+++ b/style.css
@@ -21,8 +21,11 @@
 nav{
     width: 100%;
     padding: 20px 0;
-    width: 100%;
     display: flex;
     align-items: center;
-    
+}
+
+.logo{
+    width: 50px;
+    cursor: pointer;
 }
