--- a/style.css
+++ b/style.css
@@ -8,9 +8,6 @@
 .container{
     width: 100%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     background-image: url(images/background.png);
     background-position: center;
     background-size: cover;
@@ -28,4 +25,26 @@ nav{
 .logo{
     width: 50px;
     cursor: pointer;
+}
+
+nav ul{
+    flex: 1;
+}
+
+nav ul li{
+    display: inline-block;
+    margin: 10px 20px;
+}
+
+nav ul li a{
+    color: #fff;
+    text-decoration: none;
+}
+
+nav .btn{
+    color: #fff;
+    text-decoration: none;
+    border: 1px solid #fff;
+    border-radius: 20px;
+    padding: 10px 20px;
 }
