Refactor code structure for improved readability and maintainability

--- a/style.css
+++ b/style.css
@@ -98,4 +98,11 @@ nav .btn{
 
 .coin img{
     width: 40px;
+    margin-right: 10px;
 }
+
+.coin h3{
+    color: #fff;
+    margin-bottom: 5px;
+}
+
